# dynalitepanel

./: .eslintrc.json  .gitignore  MANIFEST.in  Makefile  README.md  config.js  package.json  pyproject.toml  webpack.config.js
.devcontainer/: devcontainer.json
build-scripts/: bundle.js  env.js  paths.js  rollup.js  webpack.js
build-scripts/gulp/: clean.js  compress.js  dynalite.js  entry-html.js  translations-dynalite.js  webpack.js
dynalite_panel/: __init__.py
script/: build  develop  merge_requirements.js
script/gulp/: common.js  rollup.js
src/: __init__.py  common.ts  const.ts  dynalite-action-button.ts  dynalite-areas.ts  dynalite-channel-table.ts  dynalite-dashboard.ts  dynalite-edit-area.ts  dynalite-edit-dialog-types.ts  dynalite-edit-dialog.ts  dynalite-edit-preset-dialog.ts  dynalite-global-settings.ts  dynalite-input-element.ts  dynalite-input-settings.ts  dynalite-input.ts  dynalite-preset-table.ts  dynalite-router.ts  dynalite-select-gateway-dialog.ts  dynalite-table.ts  main.ts  show-dialog-dynalite-edit-preset.ts  show-dialog-dynalite-edit.ts  show-dialog-select-gateway.ts
src/localize/: generated.ts  localize.ts
