[build-system]
requires = ["setuptools~=62.3", "wheel~=0.37.1"]
build-backend = "setuptools.build_meta"

[project]
name         = "dynalite-panel"
version      = "0.0.4"
license      = {text = "Apache-2.0"}
description  = "Dynalite panel for Home Assistant"
readme       = "README.md"
authors      = [
    {name = "Ziv", email = "16467659+ziv1234@users.noreply.github.com"}
]
requires-python = ">=3.4.0"

[project.urls]
"Homepage" = "https://github.com/ziv1234/dynalitepanel"

[tool.setuptools]
platforms = ["any"]
zip-safe  = false
include-package-data = true

[tool.setuptools.packages.find]
include = ["dynalite_panel", "dynalite_panel.*"]

[tool.mypy]
python_version = 3.4
show_error_codes = true
strict = true
